adding the contents in their respective sections

--- a/index.html
+++ b/index.html
@@ -18,50 +18,104 @@
     </nav>
   </header>
   <main class="main-content">
+    <section class="heading-section">
+      <article class="heading-section-contents">
+        <h1 class="page-heading">Build The Community Your Fans Will Love</h1>
+        <p class="product-description">  Huddle re-imagines the way we build communities. You have a voice, but so does 
+          your audience. Create connections with your users as you engage in genuine discussion. </p>
+          <a href="#" class="heading-sec-call-to-action call-to-action">Get Started For Free</a>
+      </article>
+      <figure class="product-illustration">
+        <img src="./images/screen-mockups.svg" alt="" role="presentation">
+      </figure>
+      <ul>
+        <li>
+          <div class="communities-formed-icon">
+            <img src="./images/icon-communities.svg" alt="communities formed icon">
+          </div>
+          <figure class="app-statistics">
+            <p class="app-statistics-figure">1.4k+</p>
+            <figcaption class="app-statistics-caption">Communities Formed</figcaption>
+          </figure>
+        </li>
+        <li>
+          <div class="message-sent-icon">
+            <img src="./images/icon-messages.svg" alt="message sent icon">
+          </div>
+          <figure class="app-statistics">
+            <p class="app-statistics-figure">2.7m+</p>
+            <figcaption class="app-statistics-caption">Messages Sent</figcaption>
+          </figure>
+        </li>
+      </ul>
+    </section>
 
+    <section class="grow-section">
+      <div>
+        <img src="./images/illustration-grow-together.svg" alt="" role="presentation">
+      </div>
+      <article>
+        <div>
+          <h2> Grow Together</h2>
+          <p>  Generate meaningful discussions with your audience and build a strong, loyal community. 
+            Think of the insightful conversations you miss out on with a feedback form. </p>
+        </div>
+      </article>
+    </section>
+
+    <section>
+      <div>
+        <img src="./images/illustration-flowing-conversation.svg" alt="" role="presentation">
+      </div>
+      <article>
+        <h2>
+          Flowing Conversations</h2>
+          <p>  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+            just-in-time loading for a more natural flow.</p>
+      </article>
+    </section>
+
+    <section>
+      <div>
+        <img src="./images/illustration-your-users.svg" alt="" role="presentation">
+      </div>
+      <article>
+        <h2>Your Users</h2>
+        <p>  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
+          once signed in to your app, your users can start chatting immediately.</p>
+      </article>
+    </section>
+
+    <section class="final-call-to-action-section">
+      <h2>Ready To Build Your Community?</h2>
+      <a href="call-to-action">Get Started For Free</a>
+    </section>
   </main>
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  1.4k+
-  Communities Formed
-
-  2.7m+
-  Messages Sent
-
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
   <footer>
+    <div>
+      <h2>Newsletter</h2>
+      <p>    To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+        send you spam or pass on your email address</p>
+  
+      <form action="">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <button>Subscribe</button>
+      </form>
+    </div>
+
+    <div>
+      <div>
+        <img src="./images/logo.svg" alt="logo">
+      </div>
+      <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
+        vestibulum a, ultrices quis sem.</p>
+      <div>
+        <a href="tel:+15431234567">+1-543-123-4567</a>
+        <a href="mailto:example@huddle.com">example@huddle.com</a>
+      </div>  
+    </div>
+  
+   
   </footer>
 </body>
 </html>
