made corrections as per 'validator.w3.org'

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   </header>
   <main class="main-content">
     <section class="heading-section">
-      <article class="heading-section-contents">
-        <h1 class="page-heading">Build The Community Your Fans Will Love</h1>
+      <div class="heading-section-contents">
+        <h2 class="page-heading">Build The Community Your Fans Will Love</h2>
         <p class="product-description">  Huddle re-imagines the way we build communities. You have a voice, but so does 
           your audience. Create connections with your users as you engage in genuine discussion. </p>
           <a href="#" class="heading-sec-call-to-action call-to-action">Get Started For Free</a>
-      </article>
+      </div>
       <figure class="product-illustration">
-        <img src="./images/screen-mockups.svg" alt="" role="presentation">
+        <img src="./images/screen-mockups.svg" alt="" >
       </figure>
       <ul>
         <li>
@@ -52,38 +52,36 @@
 
     <section class="grow-section">
       <div>
-        <img src="./images/illustration-grow-together.svg" alt="" role="presentation">
+        <img src="./images/illustration-grow-together.svg" alt="" >
       </div>
-      <article>
-        <div>
+      <div>
           <h2> Grow Together</h2>
           <p>  Generate meaningful discussions with your audience and build a strong, loyal community. 
             Think of the insightful conversations you miss out on with a feedback form. </p>
-        </div>
-      </article>
+      </div>
     </section>
 
     <section>
       <div>
-        <img src="./images/illustration-flowing-conversation.svg" alt="" role="presentation">
+        <img src="./images/illustration-flowing-conversation.svg" alt="" >
       </div>
-      <article>
+      <div>
         <h2>
           Flowing Conversations</h2>
           <p>  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
             just-in-time loading for a more natural flow.</p>
-      </article>
+      </div>
     </section>
 
     <section>
       <div>
-        <img src="./images/illustration-your-users.svg" alt="" role="presentation">
+        <img src="./images/illustration-your-users.svg" alt="" >
       </div>
-      <article>
+      <div>
         <h2>Your Users</h2>
         <p>  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
           once signed in to your app, your users can start chatting immediately.</p>
-      </article>
+      </div>      
     </section>
 
     <section class="final-call-to-action-section">
@@ -97,8 +95,9 @@
       <p>    To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
         send you spam or pass on your email address</p>
   
-      <form action="">
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+      <form action="#">
+        <label for="form-query" class="form-label">Write in your queries</label>
+        <textarea name="query" id="form-query" cols="30" rows="10"></textarea>
         <button>Subscribe</button>
       </form>
     </div>
